--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" type="text/css" href="./style.css" media="screen" />
     </head>
     <body>
-        
+
+        <script src="out.js"></script>
     </body>
 </html>
