--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
 
-        <canvas id="myCanvas"></canvas>
+        <canvas id="myCanvas" width="640" height="480"></canvas>
 
         <script src="out.js"></script>
     </body>
